feat: implement take, return and return all cards
